# simulation-races

./: .gitignore  .gitmodules  README.md
race_ws/src/control_tf_odometry/: CMakeLists.txt  package.xml
race_ws/src/control_tf_odometry/config/: odometry.yaml
race_ws/src/control_tf_odometry/launch/: control_tf_odometry.launch
race_ws/src/control_tf_odometry/src/: rbcar_robot_control.cpp
race_ws/src/mapping_localization/: CMakeLists.txt  package.xml
race_ws/src/mapping_localization/launch/: amcl.launch  slam.launch
race_ws/src/races/: CMakeLists.txt  package.xml
race_ws/src/races/launch/: sim.launch  simulation.launch
race_ws/src/races/urdf/: full_racecar.xacro
race_ws/src/visual_aid/: CMakeLists.txt  package.xml
race_ws/src/visual_aid/launch/: rviz.launch
race_ws/src/visual_aid/rviz/: rviz.rviz
