<?xml version="1.0"?>
<package>
  <name>control_tf_odometry</name>
  <version>1.0.4</version>
  <description>The control_tf_odometry package</description>

  <url type="website">http://wiki.ros.org/rbcar_robot_control</url>
  <url type="repository">https://github.com/chrissunny94/ackerman_ros_robot_gazebo_simulation/tree/master/rbcar_sim/rbcar_robot_control</url>

  <license>BSD</license>

  <author email="rguzman@robotnik.es">Roberto Guzman</author> 
  <maintainer email="kolobok@todo.todo">kolobok</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>

  </export>
</package>